Rename to VirtualMaker.Bindings and port latest fixes

--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -1,12 +1,8 @@
 {
-    "name": "Bindings.Editor",
+    "name": "VirtualMaker.Bindings",
     "rootNamespace": "",
-    "references": [
-        "Bindings"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
