--- a/Bindings/Packages/com.virtualmaker.bindings/Editor/VirtualMaker.Bindings.Editor.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Editor/VirtualMaker.Bindings.Editor.asmdef
@@ -1,8 +1,12 @@
 {
-    "name": "Bindings",
+    "name": "VirtualMaker.Bindings.Editor",
     "rootNamespace": "",
-    "references": [],
-    "includePlatforms": [],
+    "references": [
+        "VirtualMaker.Bindings"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
