Update to 2022.3, remove newtonsoft dep, add BindIntegerField

--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -8,9 +8,7 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [
-        "Newtonsoft.Json.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
