--- a/.github/workflows/upm-subtree-split.yml
+++ b/.github/workflows/upm-subtree-split.yml
@@ -1,4 +1,5 @@
 #Action created by Stephen Hodgson
+#Check out https://github.com/RageAgainstThePixel/upm-template !!!
 name: upm-subtree-split
 
 on:
