--- a/.github/workflows/upm-subtree-split.yml
+++ b/.github/workflows/upm-subtree-split.yml
@@ -11,6 +11,5 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: UPM subtree split
-      uses: RageAgainstThePixel/upm-subtree-split@v1.1.3
+    - uses: RageAgainstThePixel/upm-subtree-split@v1.1.3
             
