updated copy wf

--- a/.github/workflows/copy-documentation-readme-upwards.yml
+++ b/.github/workflows/copy-documentation-readme-upwards.yml
@@ -3,7 +3,8 @@ name: copy-documentation-readme-upwards
 on:
   push:
     branches:
-      - *
+      - main
+      - dev/upm-readiness
 
 jobs:
   copy-documentation-readme-upwards:
