Checking for readme contents matching

--- a/.github/workflows/copy-documentation-readme-upwards.yml
+++ b/.github/workflows/copy-documentation-readme-upwards.yml
@@ -22,7 +22,9 @@ jobs:
         echo $readmeDir
         $readmeContent = gc (Get-Item -Path "**/Packages/com.*/Documentation~/README.md") -Raw
         $readmeContent = $readmeContent -replace '(\[.*\])\(((?!https?:\/\/).+)\)',('$1('+$readmeDir+'$2)')
-        echo (gc README.md -Raw)
+        $targetContent = gc README.md -Raw
+        echo $targetContent
+        echo (if($readmeContent -eq $targetContent) {"eq"} else {"ne"})
       # Set-Content ./README.md $readme
       #  git add ./README.md
       #  git commit -m 'Copied repo README from package README'
