Check to see if a quick set-centent, get-content will result in equal strings

--- a/.github/workflows/copy-documentation-readme-upwards.yml
+++ b/.github/workflows/copy-documentation-readme-upwards.yml
@@ -24,10 +24,11 @@ jobs:
         $readmeContent = $readmeContent -replace '(\[.*\])\(((?!https?:\/\/).+)\)',('$1('+$readmeDir+'/$2)')
         echo $readmeContent
         echo "v.s."
+        Set-Content ./README.md $readmeContent
         $targetContent = gc README.md -Raw
         echo $targetContent
         if ($readmeContent -eq $targetContent) {echo "eq"} else {echo "ne"}
-      # Set-Content ./README.md $readme
+      # Set-Content ./README.md $readmeContent
       #  git add ./README.md
       #  git commit -m 'Copied repo README from package README'
       working-directory: ${{ github.workspace }}
