--- a/.github/workflows/copy-documentation-readme-upwards.yml
+++ b/.github/workflows/copy-documentation-readme-upwards.yml
@@ -27,7 +27,7 @@ jobs:
         Set-Content README.md $readmeContent
         $targetContent = gc README.md -Raw
         echo $targetContent
-        if ($readmeContent -eq $targetContent) {echo "eq"} else {echo "ne"}
+        if (-not Compare-Object ($readmeContent | out-string) ($targetContent | out-string)) {echo "eq"} else {echo "ne"}
       # Set-Content ./README.md $readmeContent
       #  git add ./README.md
       #  git commit -m 'Copied repo README from package README'
