--- a/.github/workflows/copy-documentation-readme-upwards.yml
+++ b/.github/workflows/copy-documentation-readme-upwards.yml
@@ -3,8 +3,8 @@ name: copy-documentation-readme-upwards
 on:
   push:
     branches:
-      - main
-      - dev/upm-readiness
+      - '**'
+      - '!upm'
     paths:
       - '**/Packages/com.*/Documentation~/README.md'
 
