changed copy upwards readme to be a manual dispatch

--- a/.github/workflows/copy-documentation-readme-upwards.yml
+++ b/.github/workflows/copy-documentation-readme-upwards.yml
@@ -1,12 +1,7 @@
 name: copy-documentation-readme-upwards
 
 on:
-  push:
-    branches:
-      - '**'
-      - '!upm'
-    paths:
-      - '**/Packages/com.*/Documentation~/README.md'
+  workflow_dispatch
 
 jobs:
   copy-documentation-readme-upwards:
