Removed unused refs in assembly def

--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -2,9 +2,7 @@
     "name": "VirtualMaker.Bindings",
     "rootNamespace": "",
     "references": [
-        "Unity.TextMeshPro",
-        "Unity.ResourceManager",
-        "Utilities.Extensions.Addressables"
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
