asdef root namespaces

--- a/Bindings/Packages/com.virtualmaker.bindings/Editor/VirtualMaker.Bindings.Editor.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Editor/VirtualMaker.Bindings.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "VirtualMaker.Bindings.Editor",
-    "rootNamespace": "",
+    "rootNamespace": "VirtualMaker.Bindings.Editor",
     "references": [
         "VirtualMaker.Bindings"
     ],
