--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "VirtualMaker.Bindings",
-    "rootNamespace": "",
+    "rootNamespace": "VirtualMaker.Bindings",
     "references": [
         "Unity.TextMeshPro"
     ],
