BindList for game objects & script define improvements (#6)
Co-authored-by: Stephen Hodgson <rage.against.the.pixel@gmail.com>

--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "VirtualMaker.Bindings",
-    "rootNamespace": "",
+    "rootNamespace": "VirtualMaker.Bindings",
     "references": [
         "Unity.TextMeshPro"
     ],
@@ -11,6 +11,27 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.ugui",
+            "expression": "1.0.0",
+            "define": "UNITY_UGUI"
+        },
+        {
+            "name": "com.unity.modules.uielements",
+            "expression": "1.0.0",
+            "define": "UNITY_UI_ELEMENTS"
+        },
+        {
+            "name": "com.unity.textmeshpro",
+            "expression": "1.0.26",
+            "define": "UNITY_TMPRO"
+        },
+        {
+            "name": "com.unity.ugui",
+            "expression": "2.0.0",
+            "define": "UNITY_TMPRO"
+        }
+    ],
     "noEngineReferences": false
 }
