Added NetworkProperty<T> to bind netcode gameobject NetworkProperty<T> types
- added try/catches to some async void members
- updated support for Unity 6 and obsolete members
- changed package display name to VirtualMaker.Bindings

--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -2,7 +2,8 @@
     "name": "VirtualMaker.Bindings",
     "rootNamespace": "VirtualMaker.Bindings",
     "references": [
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.Netcode.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -31,6 +32,11 @@
             "name": "com.unity.ugui",
             "expression": "2.0.0",
             "define": "UNITY_TMPRO"
+        },
+        {
+            "name": "com.unity.netcode.gameobjects",
+            "expression": "1.0.0",
+            "define": "UNITY_NETCODE_GAMEOBJECTS"
         }
     ],
     "noEngineReferences": false
