--- a/Bindings/Packages/com.virtualmaker.bindings/package.json
+++ b/Bindings/Packages/com.virtualmaker.bindings/package.json
@@ -1,12 +1,12 @@
 {
-    "displayName": "Bindings",
-    "description": "Bindable Property class and Bindings utility class.",
-    "name": "com.virtualmaker.bindings",
-    "unity": "2020.3",
-    "version": "1.0.0",
-    "category": "utilities",
-    "dependencies": {
-        "com.unity.modules.unitywebrequesttexture": "1.0.0",
-        "com.unity.modules.unitywebrequest": "1.0.0"
-    }
+  "displayName": "VirtualMaker.Bindings",
+  "description": "Bindable Property class and Bindings utility class.",
+  "name": "com.virtualmaker.bindings",
+  "unity": "2020.3",
+  "version": "1.0.0",
+  "category": "utilities",
+  "dependencies": {
+    "com.unity.modules.unitywebrequesttexture": "1.0.0",
+    "com.unity.modules.unitywebrequest": "1.0.0"
+  }
 }
