fix author name

--- a/Bindings/Packages/com.virtualmaker.bindings/package.json
+++ b/Bindings/Packages/com.virtualmaker.bindings/package.json
@@ -2,6 +2,9 @@
   "displayName": "VirtualMaker.Bindings",
   "description": "Bindable Property class and Bindings utility class.",
   "name": "com.virtualmaker.bindings",
+  "author": {
+    "name": "VirtualMaker"
+  },
   "unity": "2020.3",
   "version": "1.0.0",
   "category": "utilities",
