backwards compat input system 1.7.0

--- a/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
+++ b/Bindings/Packages/com.virtualmaker.bindings/Runtime/VirtualMaker.Bindings.asmdef
@@ -43,6 +43,11 @@
             "name": "com.unity.inputsystem",
             "expression": "1.0.0",
             "define": "UNITY_INPUT_SYSTEM"
+        },
+        {
+            "name": "com.unity.inputsystem",
+            "expression": "1.8.0",
+            "define": "UNITY_INPUT_SYSTEM_1_8_OR_HIGHER"
         }
     ],
     "noEngineReferences": false
